--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-  "name": "php-bicycle/php-bicycle-<NULL>"
+  "name": "php-bicycle/php-bicycle-pipeline"
   , "type": "library"
-  , "description": "<NULL> is ..."
-  , "keywords": [ "alternative", "bicycle", "<NULL>"]
-  , "homepage": "https://github.com/pqbd/php-bicycle-<NULL>"
+  , "description": "Pipeline is ..."
+  , "keywords": [ "alternative", "bicycle", "pipeline"]
+  , "homepage": "https://github.com/pqbd/php-bicycle-pipeline"
   , "license": "BSD-3-Clause"
   , "authors": 
   [
@@ -14,12 +14,13 @@
       , "role": "lead"
     }
   ]
-  , "autoload": { "psr-4": { "bicycle\\<NULL>\\": "src/bicycle/<NULL>/" } }
-  , "autoload-dev": { "psr-4": { "bicycle\\<NULL>\\": "tests/bicycle/<NULL>/"} }
+  , "autoload": { "psr-4": { "bicycle\\pipeline\\": "src/bicycle/pipeline/" } }
+  , "autoload-dev": { "psr-4": { "bicycle\\pipeline\\": "tests/bicycle/pipeline/"} }
   , "require": 
   {
     "php": ">=5.3.9"
     , "php-bicycle/php-bicycle": ">=1.0.0"
+    , "php-bicycle/php-bicycle-delegate": ">=1.0.0"
   }
   , "require-dev": { "php-bicycle/php-bicycle-test-tools": ">=1.0.0" }
   , "repositories":
@@ -27,6 +28,11 @@
     {
       "type": "git"
       , "url":  "https://github.com/pqbd/php-bicycle.git"
+    }
+    ,
+    {
+      "type": "git"
+      , "url":  "https://github.com/pqbd/php-bicycle-delegate.git"
     }
     ,
     {
